# video-client

./: .gitattributes  .gitignore  CMakeLists.txt  fragment.frag  h264decoder.cpp  h264decoder.h  main.cpp  mainwindow.cpp  mainwindow.h  openglwidget.cpp  openglwidget.h  res.qrc  type.h  vertex.vert  videoclient.cpp  videoclient.h
win32/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
